# advent-of-code-2021

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
src/aoc2021/: __init__.py  __main__.py  _registry.py  _util.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py
