[build-system]
requires = ["setuptools>=59", "wheel>=0.37"]
build-backend = 'setuptools.build_meta'

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests"
disallow_untyped_defs = false
