[metadata]
name = aoc2021
version = 1.0.0
description = My Advent of Code 2021 solutions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RazerM/advent-of-code-2021
author = Frazer McLean
author_email = frazer@frazermclean.co.uk
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.10
package_dir =
    =src
packages=find:
install_requires =
    click>=8
    httpx
    more-itertools
    python-dotenv


[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    aoc2021=aoc2021.__main__:cli
